﻿9.27 -> 9.28
XX/01/2016

Balance changes:
- Gremlin (Stealth Tank) - harder to EMP
- Annihilator - damage reduced by 10%
- Doomsday Machine - damage reduced by 10% (all weapons)

Others:
- Added workaround for bug with "camera scroll at the beginning of the game"

9.26 -> 9.27
04/01/2016

- Adv playerlist: shows ally an <3 button when alliances are allowed (see at FFA servers: 'Fixed Alliances: No')
- Pathfinder improvement enabled by default (the one from v9.25)
- Fixed occasional errorspam related to stunned metal/energy storages


9.25 -> 9.26
19/12/2015

- Comblast & Dgun Range: more acurate range (takes groundheight in account)
- Adv playerlist: hides spec list as player
- Snow: shows onscreen message pregame (when its snowing)
- GUI shader and map_edge_extension: disabled by default
- Adv playerlist mascotte: click on it to change mascotte type
- Adv playerlist: shows alliances under playername with 0.5 opacity  
   (alliances are only optionally availible in ffa: with /ally #number)


9.24 -> 9.25
13/12/2015

- Bugfixes
- Pathfinder improvement (optional, for testing)


9.23 -> 9.24
08/12/2015

- Decoy coms dont have real dgun weapon damage anylonger.
- Ally selected units: fixed dead mouseclick area


9.21 -> 9.23
05/12/2015

- Ally selected units: disco/large dots bugfix + movable options GUI + auto-scale GUI according to resolution
- Bet Frontend: removed dead mouseclick area when being player + unit bet list sorted by time + keeps working on pause
- Ally resourcebars: slightly larger again on small resolutions
- Added widget: "Bloom shader highlight"
- Passive builders (tweakUI) options only show when playing + auto scales according to resolution


9.19 -> 9.21
27/11/2015

- Added widget: "Darken Map": default enabled, ctrl+alt+[ or ], remembers per map, reset with /resetmapdarkness
- Bloom Shader: intenser + darkens map a bit
- Bet Frontend: added GUI to do a bet + 'select bet units' button